--- a/client/src/scss/partials/_note.scss
+++ b/client/src/scss/partials/_note.scss
@@ -1,9 +1,12 @@
 .note {
-  width: 200px;
+  width: 100px;
   height: 100px;
-  background-color: red;
+  background-color: white;
   position: absolute;
   transition: left .1s, top .1s;
+  border-radius: 4px;
+
+  box-shadow: -4px -4px 2px rgba(0,0,0,0.4);
 }
 
 .note:hover {
