--- a/client/src/scss/partials/_main.scss
+++ b/client/src/scss/partials/_main.scss
@@ -2,6 +2,10 @@
 $red: #F44336;
 $blue: #3F51B5;
 
+$primary-color: #4ABDAC;
+$secondary-color: #FC4A1A;
+$accent-color: #F7B733;
+
 // background colors
 $dark-gray: #E0E0E0;
 $medium-gray: #F5F5F5;
@@ -19,5 +23,5 @@ $light-gray: #FAFAFA;
 body {
   width: 100%;
   height: 100vh;
-  background-color: $red;
+  background-color: $primary-color;
 }
