--- a/client/src/scss/partials/_ui.scss
+++ b/client/src/scss/partials/_ui.scss
@@ -18,9 +18,9 @@
   width: 212px;
   height: 40px;
   margin: auto;
-  background-color: $blue;
+  background-color: $secondary-color;
   color: white;
-  box-shadow: -3px -3px 2px $dark-gray;
+  box-shadow: 0px 3px 2px $dark-gray;
   border: none;
   border-radius: 3px;
   font-size: 1.1em;
@@ -31,12 +31,12 @@
   // hover styles
   &:hover {
     cursor: pointer;
-    box-shadow: -7px -7px 7px $dark-gray;
+    box-shadow: 4px 7px 7px $dark-gray, -4px 0px 7px $dark-gray;
     width: 217px;
     height: 45px;
   }
   &:active {
-    box-shadow: -3px -3px 2px $dark-gray;
+    box-shadow: 0px 3px 2px $dark-gray;
     width: 212px;
     height: 40px;
   }
@@ -48,36 +48,43 @@
   position: absolute;
   background-color: white;
   width: 500px;
-  height: 300px;
+  height: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 5px;
-  box-shadow: -7px -7px 5px rgba(0,0,0,0.4);
+  box-shadow: 0px 7px 5px rgba(0,0,0,0.4);
 }
 
-#landing-screen h1 {
-  width: 100%;
-  text-align: center;
+#landing-screen img {
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 20px;
+  transform: translate(-50%, 0);
+}
+
+#landing-controls {
   position: relative;
-  top: 50px;
+  top: 250px;
 }
 
 #make-button {
   @extend .button;
-  top: 150px;
 }
 
 #join-button {
   @extend .button;
-  top: 200px;
+  top: 55px;
 }
 
 /* connect controls */
 #connect-controls {
   opacity: 0;
-  text-align: center;
+  //text-align: center;
   display: none;
+  position: relative;
+  top: 250px;
 }
 
 input[type='text'] {
@@ -88,18 +95,24 @@ input[type='text'] {
   font-size: 1em;
   border-radius: 4px;
   border: 2px solid $dark-gray;
-  margin-bottom: 10px;
   position: relative;
-  top: 85px;
+  margin-bottom: 10px;
+}
+
+#break {
+  width: 212px;
+  height: 2px;
+  margin: auto;
+  background-color: $dark-gray;
 }
 
 #connect-button {
   @extend .button;
-  top: 230px;
+  top: 125px;
 }
 
 #back-button {
   @extend .button;
-  background-color: $red;
-  top: 280px;
+  background-color: $primary-color;
+  top: 180px;
 }
