--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: #F44336; }
+  background-color: #4ABDAC; }
 
 /*
   _landing.scss
@@ -21,9 +21,9 @@ body {
   width: 212px;
   height: 40px;
   margin: auto;
-  background-color: #3F51B5;
+  background-color: #FC4A1A;
   color: white;
-  box-shadow: -3px -3px 2px #E0E0E0;
+  box-shadow: 0px 3px 2px #E0E0E0;
   border: none;
   border-radius: 3px;
   font-size: 1.1em;
@@ -33,11 +33,11 @@ body {
   transition: width 0.15s, height 0.15s, box-shadow 0.15s; }
   .button:hover, #make-button:hover, #join-button:hover, #connect-button:hover, #back-button:hover {
     cursor: pointer;
-    box-shadow: -7px -7px 7px #E0E0E0;
+    box-shadow: 4px 7px 7px #E0E0E0, -4px 0px 7px #E0E0E0;
     width: 217px;
     height: 45px; }
   .button:active, #make-button:active, #join-button:active, #connect-button:active, #back-button:active {
-    box-shadow: -3px -3px 2px #E0E0E0;
+    box-shadow: 0px 3px 2px #E0E0E0;
     width: 212px;
     height: 40px; }
 
@@ -45,30 +45,33 @@ body {
   position: absolute;
   background-color: white;
   width: 500px;
-  height: 300px;
+  height: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 5px;
-  box-shadow: -7px -7px 5px rgba(0, 0, 0, 0.4); }
+  box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.4); }
 
-#landing-screen h1 {
-  width: 100%;
-  text-align: center;
+#landing-screen img {
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 20px;
+  transform: translate(-50%, 0); }
+
+#landing-controls {
   position: relative;
-  top: 50px; }
-
-#make-button {
-  top: 150px; }
+  top: 250px; }
 
 #join-button {
-  top: 200px; }
+  top: 55px; }
 
 /* connect controls */
 #connect-controls {
   opacity: 0;
-  text-align: center;
-  display: none; }
+  display: none;
+  position: relative;
+  top: 250px; }
 
 input[type='text'] {
   display: block;
@@ -78,16 +81,21 @@ input[type='text'] {
   font-size: 1em;
   border-radius: 4px;
   border: 2px solid #E0E0E0;
-  margin-bottom: 10px;
   position: relative;
-  top: 85px; }
+  margin-bottom: 10px; }
+
+#break {
+  width: 212px;
+  height: 2px;
+  margin: auto;
+  background-color: #E0E0E0; }
 
 #connect-button {
-  top: 230px; }
+  top: 125px; }
 
 #back-button {
-  background-color: #F44336;
-  top: 280px; }
+  background-color: #4ABDAC;
+  top: 180px; }
 
 #board {
   display: none;
@@ -102,7 +110,7 @@ input[type='text'] {
   position: absolute;
   transition: left .1s, top .1s;
   border-radius: 4px;
-  box-shadow: -4px -4px 2px rgba(0, 0, 0, 0.4); }
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.4); }
 
 .note:hover {
   opacity: 0.6;
