--- a/client/src/scss/partials/_main.scss
+++ b/client/src/scss/partials/_main.scss
@@ -11,6 +11,9 @@ $dark-gray: #E0E0E0;
 $medium-gray: #F5F5F5;
 $light-gray: #FAFAFA;
 
+// fonts
+$Roboto: 'Roboto', sans-serif;
+
 // reset styles
 * {
   margin: 0;
@@ -24,5 +27,5 @@ body {
   width: 100%;
   height: 100vh;
   background-color: $primary-color;
-  font-family: 'Roboto', sans-serif;
+  font-family: $Roboto;
 }
