--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #4ABDAC;
-  font-family: 'Roboto', sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 /*
   _landing.scss
@@ -85,12 +85,6 @@ input[type='text'] {
   position: relative;
   margin-bottom: 10px; }
 
-#break {
-  width: 212px;
-  height: 2px;
-  margin: auto;
-  background-color: #E0E0E0; }
-
 #connect-button {
   top: 125px; }
 
@@ -106,7 +100,8 @@ input[type='text'] {
 
 .note {
   width: 100px;
-  height: 100px;
+  height: auto;
+  min-height: 100px;
   background-color: white;
   position: absolute;
   transition: left .1s, top .1s;
@@ -135,6 +130,7 @@ input[type='text'] {
   top: 5px;
   left: 5px;
   width: 90px;
-  height: 90px; }
+  height: 90px;
+  word-break: break-all; }
 
 /*# sourceMappingURL=app.css.map */
