--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -118,11 +118,12 @@ input[type='text'] {
 
 .note textarea {
   border: none;
-  margin: auto;
   resize: none;
   position: relative;
   top: 5px;
-  left: 5px; }
+  left: 5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 1em; }
 
 .note p {
   pointer-events: none;
@@ -131,6 +132,6 @@ input[type='text'] {
   left: 5px;
   width: 90px;
   height: 90px;
-  word-break: break-all; }
+  word-wrap: normal; }
 
 /*# sourceMappingURL=app.css.map */
