--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -85,6 +85,12 @@ input[type='text'] {
   position: relative;
   margin-bottom: 10px; }
 
+#copy-room-code {
+  position: relative;
+  top: 75px;
+  left: -50px;
+  text-align: center; }
+
 #connect-button {
   top: 125px; }
 
@@ -93,13 +99,18 @@ input[type='text'] {
   top: 180px; }
 
 #sidebar {
-  width: 250px;
+  width: 350px;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   position: relative;
-  left: -200px;
+  left: -300px;
   top: -100vh;
-  opacity: 0; }
+  opacity: 0;
+  color: white; }
+
+#sidebar p {
+  position: relative;
+  left: 50px; }
 
 #sidebar-break {
   width: 2px;
@@ -114,7 +125,7 @@ input[type='text'] {
   position: absolute;
   text-align: center;
   line-height: 30px;
-  left: 200px;
+  left: 300px;
   width: 30px;
   height: 30px;
   padding-left: 10px;
@@ -124,6 +135,11 @@ input[type='text'] {
 #menu-button:hover {
   background-color: white;
   cursor: pointer; }
+
+#user-list {
+  list-style-type: none;
+  position: absolute;
+  top: 130px; }
 
 #board {
   display: none;
