--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -173,7 +173,8 @@ input[type='text'] {
   top: 5px;
   left: 5px;
   font-family: "Roboto", sans-serif;
-  font-size: 1em; }
+  font-size: 1em;
+  background-color: transparent; }
 
 .note p {
   pointer-events: none;
