--- a/client/src/scss/partials/_ui.scss
+++ b/client/src/scss/partials/_ui.scss
@@ -164,3 +164,14 @@ input[type='text'] {
   top: 130px;
   left: 20px;
 }
+
+.tip {
+  width: 800px;
+  text-align: center;
+  color: $dark-gray;
+  border: 2px solid $dark-gray;
+  border-radius: 4px;
+  display: none;
+  @include absolute-position(50%, 50%);
+  transform: translate(-50%, -50%);
+}
