--- a/client/src/scss/partials/_ui.scss
+++ b/client/src/scss/partials/_ui.scss
@@ -99,6 +99,29 @@ input[type='text'] {
   margin-bottom: 10px;
 }
 
+/* room code display screen */
+#room-code-display {
+  position: absolute;
+  background-color: white;
+  width: 500px;
+  height: 300px;
+  top: 50%;
+  left: calc(100% + 250px);
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  box-shadow: 0px 7px 5px rgba(0,0,0,0.4);
+}
+#room-code-display h1 {
+  margin: 20px;
+  text-align: center;
+  color: rgba(0,0,0,.73);
+}
+
+#go-button {
+  @extend .button;
+  top: 200px;
+}
+
 #copy-room-code {
   position: relative;
   top: 75px;
@@ -122,7 +145,7 @@ input[type='text'] {
   height: 100vh;
   background-color: rgba(0,0,0,0.7);
   position: relative;
-  left: -300px;
+  left: 0px;
   top: -100vh;
   opacity: 0;
   color: white;
