--- a/client/src/scss/partials/_ui.scss
+++ b/client/src/scss/partials/_ui.scss
@@ -111,13 +111,13 @@ input[type='text'] {
   border-radius: 5px;
   box-shadow: 0px 7px 5px rgba(0,0,0,0.4);
 }
-#room-code-display h1 {
+#room-code-display h1, #disconnect-dialog h1 {
   margin: 20px;
   text-align: center;
   color: rgba(0,0,0,.73);
 }
 
-#go-button {
+#go-button, #error-dialog-button {
   @extend .button;
   top: 200px;
 }
@@ -198,3 +198,24 @@ input[type='text'] {
   @include absolute-position(50%, 50%);
   transform: translate(-50%, -50%);
 }
+
+/* error styles */
+#server-disconnect-error {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.4);
+  opacity: 0;
+  display: none;
+}
+
+ #disconnect-dialog {
+   position: absolute;
+   background-color: white;
+   width: 500px;
+   height: 300px;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   border-radius: 5px;
+   box-shadow: 0px 7px 5px rgba(0,0,0,0.4);
+ }
